Comment sort menu: fix extra padding

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1403,7 +1403,7 @@ a.author { margin-right: 0.5em; }
     padding: 0;
     color: gray;
 
-    form { padding-left: 8px; }
+    form.toggle { margin-left: 8px; }
 }
 
 .commentarea .menuarea .toggle {
